@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	6.73 (gritter) 6/1/06";
+	"@(#)/usr/ucb/otfdump.sl	6.74 (gritter) 6/4/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  6.73 (gritter) 6/1/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 6.73 (gritter) 6/1/06";
+static const char sccsid[] USED = "@(#)dpost.sl  6.74 (gritter) 6/4/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 6.74 (gritter) 6/4/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.73 (gritter) 6/1/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.74 (gritter) 6/4/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.73 (gritter) 6/1/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.74 (gritter) 6/4/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "6.73";
+const char revision[] = "6.74";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.43 (gritter) 4/26/06
@@ -26,13 +26,13 @@ n2.c: * Sccsid @(#)n2.c	1.20 (gritter) 4/27/06
 n3.c: * Sccsid @(#)n3.c	1.90 (gritter) 6/1/06
 n4.c: * Sccsid @(#)n4.c	1.28 (gritter) 5/31/06
 n5.c: * Sccsid @(#)n5.c	1.43 (gritter) 5/6/06
-n7.c: * Sccsid @(#)n7.c	1.48 (gritter) 5/2/06
+n7.c: * Sccsid @(#)n7.c	1.49 (gritter) 6/4/06
 n8.c: * Sccsid @(#)n8.c	1.23 (gritter) 4/19/06
 n9.c: * Sccsid @(#)n9.c	1.44 (gritter) 5/2/06
-ni.c: * Sccsid @(#)ni.c	1.21 (gritter) 4/18/06
+ni.c: * Sccsid @(#)ni.c	1.22 (gritter) 6/4/06
 nii.c: * Sccsid @(#)nii.c	1.30 (gritter) 4/26/06
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
-tdef.h: * Sccsid @(#)tdef.h	1.81 (gritter) 5/6/06
+tdef.h: * Sccsid @(#)tdef.h	1.82 (gritter) 6/4/06
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.23 (gritter) 3/22/06
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.34 (gritter) 5/6/06
 nroff.d/proto.h: * Sccsid @(#)proto.h	1.34 (gritter) 4/14/06
